--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-redux": "^7.1.34",
     "framer-motion": "^12.12.1",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.8",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
